Updated JS file to show the user added tasks on the screen.

--- a/index.html
+++ b/index.html
@@ -25,49 +25,7 @@
       </div>
       <button class="clear-btn">Clear All</button>
     </div>
-    <ul class="task-box">
-      <li class="task">
-        <label for="1">
-          <input type="checkbox" id="1">
-          <p>Read some book</p>
-        </label>
-        <div class="settings">
-            <i class="fa-solid fa-ellipsis"></i>
-            <ul class="settings-menu">
-              <li><i class="fa-solid fa-pen-to-square" style="color: #000000;"></i>Edit</li>
-              <li><i class="fa-solid fa-trash-can" style="color: #000000;"></i>Delete</li>
-            </ul>
-        </div>
-      </li>
-      <li class="task">
-        <label for="2">
-          <input type="checkbox" id="2">
-          <p>Drink water</p>
-        </label>
-        <div class="settings">
-            <i class="fa-solid fa-ellipsis"></i>
-        </div>
-        </label>
-      </li>
-      <li class="task">
-        <label for="3">
-          <input type="checkbox" id="3">
-          <p>Eat a fruit</p>
-        </label>
-        <div class="settings">
-            <i class="fa-solid fa-ellipsis"></i>
-        </div>
-      </li>
-      <li class="task">
-        <label for="4">
-          <input type="checkbox" id="4">
-          <p>Now go to sleep buddy</p>
-        </label>
-        <div class="settings">
-            <i class="fa-solid fa-ellipsis"></i>
-        </div>
-      </li>
-    </ul>
+    <ul class="task-box"></ul>
   </div>
 
   <script src="script.js"></script>
